Added PID, updated Motor Driver

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,6 +10,7 @@ WIRELESS_PROJ_DIR := ../WirelessSensor/Sensor/src
 WIRELESS_INC_DIR := $(WIRELESS_PROJ_DIR)
 MOTOR_DRIVER_SRC_DIR := $(PROJ_DIR)/MotorDriver
 MOTOR_DRIVER_INC_DIR := $(PROJ_DIR)/MotorDriver
+PID_INC_DIR := $(PROJ_DIR)/PID
 I2C_SRC_DIR := $(WIRELESS_PROJ_DIR)/I2C
 I2C_INC_DIR := $(WIRELESS_PROJ_DIR)/I2C
 IMU_SRC_DIR := $(WIRELESS_PROJ_DIR)/IMU
@@ -162,6 +163,7 @@ INC_FOLDERS += \
   $(CONFIG_DIR) \
   $(PROJ_INC_DIR) \
   $(MOTOR_DRIVER_INC_DIR) \
+  $(PID_INC_DIR) \
   $(WIRELESS_INC_DIR) \
   $(I2C_INC_DIR) \
   $(IMU_INC_DIR) \
