Refactored board init code

--- a/src/Makefile
+++ b/src/Makefile
@@ -25,6 +25,8 @@ BLE_SRC_DIR := $(WIRELESS_PROJ_DIR)/BLE
 BLE_INC_DIR := $(WIRELESS_PROJ_DIR)/BLE
 FLASH_SRC_DIR := $(WIRELESS_PROJ_DIR)/Flash
 FLASH_INC_DIR := $(WIRELESS_PROJ_DIR)/Flash
+BOARD_SRC_DIR := $(WIRELESS_PROJ_DIR)/Board
+BOARD_INC_DIR := $(WIRELESS_PROJ_DIR)/Board
 CONFIG_DIR := ../config
 VERBOSE := 1
 
@@ -46,6 +48,7 @@ SRC_FILES += \
   $(LSM6DS3_SRC_DIR)/LSM6DS3Sensor.cpp \
   $(LIS3MDL_SRC_DIR)/LIS3MDL_MAG_Driver.c \
   $(LIS3MDL_SRC_DIR)/LIS3MDLSensor.cpp \
+  $(BOARD_SRC_DIR)/board_init.cpp \
   $(SDK_ROOT)/modules/nrfx/mdk/gcc_startup_nrf52840.S \
   $(SDK_ROOT)/components/libraries/bsp/bsp.c \
   $(SDK_ROOT)/components/libraries/bsp/bsp_btn_ble.c \
@@ -172,6 +175,7 @@ INC_FOLDERS += \
   $(LSM6DS3_INC_DIR) \
   $(LIS3MDL_INC_DIR) \
   $(AHRS_INC_DIR) \
+  $(BOARD_INC_DIR) \
   $(SDK_ROOT)/components/libraries/uart \
   $(SDK_ROOT)/components/nfc/ndef/generic/message \
   $(SDK_ROOT)/components/nfc/t2t_lib \
