Performance measurement support

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,6 +14,8 @@ MOTOR_DRIVER_INC_DIR := $(PROJ_DIR)/MotorDriver
 PID_INC_DIR := $(PROJ_DIR)/PID
 QDEC_INC_DIR := $(PROJ_DIR)/QDEC
 QDEC_SRC_DIR := $(PROJ_DIR)/QDEC
+PERF_INC_DIR := $(PROJ_DIR)/PERF
+PERF_SRC_DIR := $(PROJ_DIR)/PERF
 I2C_SRC_DIR := $(WIRELESS_PROJ_DIR)/I2C
 I2C_INC_DIR := $(WIRELESS_PROJ_DIR)/I2C
 IMU_SRC_DIR := $(WIRELESS_PROJ_DIR)/IMU
@@ -57,6 +59,7 @@ SRC_FILES += \
   $(BOARD_SRC_DIR)/board_init.cpp \
   $(APPDEMUX_SRC_DIR)/AppDemux.cpp \
   $(QDEC_SRC_DIR)/QDEC.cpp \
+  $(PERF_SRC_DIR)/PERF.cpp \
   $(SDK_ROOT)/modules/nrfx/mdk/gcc_startup_nrf52840.S \
   $(SDK_ROOT)/components/libraries/bsp/bsp.c \
   $(SDK_ROOT)/components/libraries/bsp/bsp_btn_ble.c \
@@ -177,6 +180,7 @@ INC_FOLDERS += \
   $(MOTOR_DRIVER_INC_DIR) \
   $(PID_INC_DIR) \
   $(QDEC_INC_DIR) \
+  $(PERF_INC_DIR) \
   $(WIRELESS_INC_DIR) \
   $(I2C_INC_DIR) \
   $(IMU_INC_DIR) \
@@ -447,7 +451,7 @@ endef
 # Create listing .lst file from the .out file
 %.lst: %.out
 	$(info Preparing: $@)
-	$(NO_ECHO)$(OBJDUMP) -D -S $< >& $@
+	$(NO_ECHO)$(OBJDUMP) -D -S $< > $@
 
 $(foreach target, $(TARGETS), $(call define_target, $(target)))
 
